<resources>
    <string name="app_name">Note</string>
    <string name="accessibility_service_description">智能安装服务，无需用户的任何操作就可以自动安装程序。</string>

    <!-- Compress Speed Up -->
    <string name="compress_switch">省流加速</string>
    <string name="compress_today_num_null">0</string>
    <string name="compress_speed_up_title">省流加速</string>
    <string name="compress_clear_to_null">"清零"</string>
    <string name="compress_low">低</string>
    <string name="compress_middle">中</string>
    <string name="compress_high">高</string>
    <string name="compress_low_image">低</string>
    <string name="compress_middle_image">中</string>
    <string name="compress_high_image">高</string>
    <string name="compress_advert">广告过滤</string>
    <string name="compress_advert_summary">智能拦截页面广告、弹框广告</string>
    <string name="compress_today_num">今日节省移动流量</string>
    <string name="compress_today_num_kb">B</string>
    <string name="compress_today_num_ex">1000.4</string>
    <string name="compress_totle_num_ex">累计节省移动流量</string>
    <string name="compress_totle_num_null">累计节省移动流量0B</string>
    <string name="compress_image_quality">图片质量</string>
    <string name="compress_quality_middle_text">图片清晰度一般，平均节省60%流量</string>
    <string name="compress_quality_low_text">图片清晰度较低，平均节省90%流量</string>
    <string name="compress_quality_high_text">图片清晰度较高，平均节省40%流量</string>
    <string name="compress_advert_num">累计拦截广告</string>
    <string name="compress_advert_unit">条</string>
    <string name="compress_advert_open">开启</string>
    <string name="compress_advert_close">关闭</string>
    <string name="compress_clear_toast">流量数据已清零</string>
    <string name="compress_advert_clear_toast">累计拦截广告数据已清零</string>
    <string name="skip_button">跳过</string>

    <string name="add_bookmark_titlebar_drop">舍弃</string>
    <string name="add_bookmark_titlebar_save">保存</string>
    <string name="bookmark_name">"名称："</string>
    <string name="bookmark_address">"网址："</string>
    <string name="addbookmark_to">"添加到"</string>
    <string name="add_bookmark">"书签"</string>
    <string name="add_online_page">"主页书签"</string>
    <string name="add_home">"手机桌面"</string>
    <string name="add_home_prompt">"您的桌面需支持快捷方式，发送至桌面才能生效"</string>
    <string name="dialog_add_file_title">新建文件夹</string>
    <string name="bookmark_parent">书签根目录</string>
    <string name="bookmark_move">移动至</string>
    <string name="bookmark_add">添加到</string>
    <string name="bookmark_needs_title">"请填写书签名称"</string>
    <string name="bookmark_needs_url">"请填写书签网址"</string>
    <string name="bookmark_needs_select">"请选择收藏类型的图标"</string>
    <string name="bookmark_add_complete">"书签保存成功"</string>
    <string name="bookmark_duplicate">已有相同书签，请勿重复添加</string>
    <string name="bookmark_add_success">"已保存至书签"</string>
    <string name="bookmark_add_failed">"保存书签失败"</string>
    <string name="bookmark_delete">"已从书签移除"</string>
    <string name="bookmark_address_empty">"网址不能为空"</string>
    <string name="bookmark_address_invalid">"网址链接无效"</string>

    <string name="version_unknown">未知版本</string>

    <string name="shortcut_www">www.</string>
    <string name="shortcut_slash">/</string>
    <string name="shortcut_point">.</string>
    <string name="shortcut_com">.com</string>
    <string name="shortcut_cn">.cn</string>
    <string name="shortcut_Paste">粘帖</string>

    <string name="toast_downloaded_File">正在下载中，</string>
    <string name="toast_downloaded_click">点击查看</string>

    <string name="text">最近在做一个类似于QQ空间的一个社交圈的模块的开发。有一个需求是当用户发表的内容超出4行时，显示一个按钮，点击按钮展示全文。我还真没有发现TextView有获取文本内容有没有显示省略号这个方法。没办法，只能自己想办法了</string>
    >

    <!--// webpage-->
    <string name="webpage_discuss_cancel">取消</string>
    <string name="webpage_discuss_publish">发表</string>
    <string name="publish_succeed">发表成功</string>
    <string name="publish_failed">评论受限</string>
    <string name="reply">回复</string>
    <string name="reply_ta">回复TA</string>
    <string name="reply_dot">·</string>
    <string name="expand">展开</string>
    <string name="web_comment_loading">加载中</string>


</resources>
